# tauri-vue-template

./: .editorconfig  README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  typed-router.d.ts  uno.config.ts  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue  TheFooter.vue  TheTitlebar.vue
src/composables/: dark.ts
src/layouts/: default.vue
src/layouts/components/: Footer.vue  Sidebar.vue  Titlebar.vue
src/pages/: index.vue
src/pages/demo/: database.vue  websocket.vue
