[package]
name = "tauri-vue-starter"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-show", "window-hide", "window-unminimize", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-close", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
log = "0.4.21"
env_logger = "0.11.3"
tokio-tungstenite = "0.21.0"
tokio = { version = "1.36.0", features = ["net"] }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
